# birdhub

./: .gitignore  ATTRIBUTION  CRYPTO_ARCHITECTURE.txt  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING.md  build_releases.sh  client-config.toml  config.toml  docker-compose.yml  hub-config.toml  mock-netbird.sh
.github/workflows/: release.yml
crates/temper/: BINARY_SIZE_GUIDE.md  CHANGELOG.md  CRYPTO_PROVIDER_ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY_V0.5.md  PERFORMANCE_OPTIMIZATIONS.md  README.md
crates/temper/.github/: MEMORY_PATTERN_EXAMPLES.md  copilot-instructions.md
crates/temper/.github/agents/: temper.agent.md
crates/temper/.github/instructions/: entropy.instructions.md  rust-nostd.instructions.md  seal.instructions.md  testing.instructions.md
crates/temper/benches/: seal_bench.rs
crates/temper/examples/: crypto_provider_demo.rs  kernel_chain_demo.rs  seal_demo.rs
crates/temper/src/: ca.rs  ca_tests.rs  crypto_provider.rs  entropy.rs  entropy_source.rs  entropy_tests.rs  envelope.rs  envelope_tests.rs  error.rs  hardware_example.rs  lib.rs  plugins.rs  seal.rs  seal_tests.rs
crates/temper/src/crypto_provider/: cpu.rs
examples/: explore_ss.rs
packaging/: birdhub.service
packaging/alpine/: APKBUILD  birdhub.initd
packaging/archlinux/: PKGBUILD
packaging/fedora/: birdhub.spec
src/: auth.rs  config.rs  crypto.rs  crypto.rs.backup  dns.rs  error.rs  gateway.rs  handshake.rs  health.rs  hub.rs  i2p.rs  leaks.rs  main.rs  netbird.rs  nft.rs  policy.rs  region.rs  routing.rs  session.rs  shadowsocks.rs  transport.rs  watchdog.rs
