[package]
name = "birdhub"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
# -- Logging
log = "0.4"
env_logger = "0.11"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
bytes = "1"
arc-swap = "1.9.0"
crossbeam-utils = "0.8.21"
toml = "1.1.0"
shadowsocks-service = { version = "1.24.0", features = [
    "trust-dns", "local", "server", "stream-cipher", "aead-cipher-extra", "aead-cipher-2022-extra",
    "local-flow-stat", "local-tun", "manager", "security-replay-attack-detect", "local-dns",
    "local-redir", "local-tunnel", "local-socks4", "local-http", "local-http-rustls",
    "local-online-config", "local-fake-dns", "dns-over-https", "dns-over-tls", "dns-over-h3", "bson",
    "brotli", "flate2", "zstd", "rocksdb", "rustls-native-certs", "webpki-roots",
    "tokio-rustls", "http", "http-body-util", "httparse", "hyper", "mime",
    "etherparse", "smoltcp", "hickory-dns", "hickory-resolver", "tun", "aead-cipher",
    "aead-cipher-2022", "local-dns-relay",
] }
shadowsocks = "1.24.0"
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
dns-parser = "0.8.0"
rand = "0.10.0"
